@@ -700,6 +700,11 @@ Deprecated Python modules, functions and methods
   :meth:`~string.Formatter.format` method of the :class:`string.Formatter`
   class has been deprecated.
 
+* :func:`platform.dist` and :func:`platform.linux_distribution` functions are
+  now deprecated and will be removed in Python 3.7.  Linux distributions use
+  too many different ways of describing themselves, so the functionality is
+  left to a package.
+  (Contributed by Vajrasky Kok and Berker Peksag in :issue:`1322`.)
 
 Deprecated functions and types of the C API
 -------------------------------------------
